--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -14,6 +14,15 @@ jobs:
         steps:
             - uses: actions/checkout@v4
 
+            # Setup Go and run tests
+            - name: Set up Go
+              uses: actions/setup-go@v4
+              with:
+                  go-version: '1.24'
+
+            - name: Run unit tests
+              run: go test ./...
+
             - name: Release Please
               uses: googleapis/release-please-action@v4
               with:
